--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
 }
 
 .container {
-    width: 100;
+    width: 100px;
     padding: 0 0.75rem;
     margin: 0 auto;
 }
@@ -248,7 +248,7 @@ body {
     .job-position-info {
         padding: 0;
         margin-bottom: 0;
-        border-bottom: 0px;
+        border-bottom: 0;
     }
 
     .job-position-avatar {
